--- a/my-react-app/src/styles/pages/_about.scss
+++ b/my-react-app/src/styles/pages/_about.scss
@@ -56,71 +56,3 @@
     margin: auto;
   }
 }
-
-// ----------- Collapse component -------------
-
-.collapse {
-  width: 100%;
-  background-color: vars.$color__white;
-  border-radius: 6px;
-}
-
-.collapse-toggle {
-  cursor: pointer;
-  color: vars.$color__white;
-  background-color: vars.$color_red;
-  padding: 10px 9px;
-  font-family: vars.$font-primary;
-  font-size: vars.$font-size-xm;
-  font-weight: vars.$font-weight-medium;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  border-radius: 6px;
-  width: 100%;
-  @media (min-width: 902px) {
-    font-size: vars.$font-size-lg;
-    font-weight: vars.$font-weight-bold;
-  }
-}
-
-.arrow {
-  width: 17px;
-  height: 17px;
-  background-image: url("/images/flèche-haut.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: transform 0.5s ease;
-  padding-top: 0.5rem;
-}
-
-.arrow.open {
-  transform: rotateX(180deg);
-}
-
-/* --- Animation du content --- */
-
-.collapse-content {
-  overflow: hidden;
-  transition: max-height 0.5s ease-in-out;
-  background-color: vars.$color_gray;
-  max-height: 0;
-}
-
-.collapse-content.open {
-  max-height: 1000px; /* Fixed value that's taller than your content */
-}
-
-.collapse-inner {
-  color: vars.$color__black;
-  font-family: vars.$font-primary;
-  font-size: vars.$font-size-xs;
-  font-weight: vars.$font-weight-regular;
-  text-align: left;
-  line-height: 1.42;
-  padding: 13px 20px;
-  @media (min-width: 902px) {
-    font-size: vars.$font-size-lg;
-  }
-}
